--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,99 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{ partial "head" . }}
-    <body>
-        {{ partial "header" . }}
+  {{ partial "head" . }}
+  <body>
+    {{ partial "header" . }}
 
-        <div class="main-container">
-            {{ block "main" . }}{{ end }}
-        </div>
+    <div class="main-container">{{ block "main" . }}{{ end }}</div>
 
-        {{ partial "footer" . }}
+    {{ partial "footer" . }}
 
-        <!-- Required vendor scripts (Do not remove) -->
-        <script type="text/javascript" src="/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/popper.min.js"></script>
-        <script type="text/javascript" src="/js/bootstrap.js"></script>
+    <!-- Required vendor scripts (Do not remove) -->
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/popper.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.js"></script>
 
-        <!-- Optional Vendor Scripts (Remove the plugin script here and comment initializer script out of index.js if site does not use that feature) -->
+    <!-- Optional Vendor Scripts (Remove the plugin script here and comment initializer script out of index.js if site does not use that feature) -->
 
-        <!-- AOS (Animate On Scroll - animates elements into view while scrolling down) -->
-        <script type="text/javascript" src="/js/aos.js"></script>
-        <!-- Flatpickr (calendar/date/time picker UI) -->
-        <script type="text/javascript" src="/js/flatpickr.min.js"></script>
-        <!-- Flickity (handles touch enabled carousels and sliders) -->
-        <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script>
+    <!-- AOS (Animate On Scroll - animates elements into view while scrolling down) -->
+    <script type="text/javascript" src="/js/aos.js"></script>
+    <!-- Flatpickr (calendar/date/time picker UI) -->
+    <script type="text/javascript" src="/js/flatpickr.min.js"></script>
+    <!-- Flickity (handles touch enabled carousels and sliders) -->
+    <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script>
 
-        <!-- jarallax (parallax effect and video backgrounds) -->
-        <!-- <script type="text/javascript" src="/js/jarallax.min.js"></script> -->
-        <!-- <script type="text/javascript" src="/js/jarallax-video.min.js"></script> -->
-        <!-- <script type="text/javascript" src="/js/jarallax-element.min.js"></script> -->
+    <!-- jarallax (parallax effect and video backgrounds) -->
+    <!-- <script type="text/javascript" src="/js/jarallax.min.js"></script> -->
+    <!-- <script type="text/javascript" src="/js/jarallax-video.min.js"></script> -->
+    <!-- <script type="text/javascript" src="/js/jarallax-element.min.js"></script> -->
 
-        <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
-        <script type="text/javascript" src="/js/scrollMonitor.js"></script>
-        <!-- jQuery smartWizard facilitates steppable wizard content -->
-        <script type="text/javascript" src="/js/jquery.smartWizard.min.js"></script>
-        <!-- Smooth scroll (animation to links in-page)-->
-        <script type="text/javascript" src="/js/smooth-scroll.polyfills.min.js"></script>
+    <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
+    <script type="text/javascript" src="/js/scrollMonitor.js"></script>
+    <!-- jQuery smartWizard facilitates steppable wizard content -->
+    <script type="text/javascript" src="/js/jquery.smartWizard.min.js"></script>
+    <!-- Smooth scroll (animation to links in-page)-->
+    <script
+      type="text/javascript"
+      src="/js/smooth-scroll.polyfills.min.js"
+    ></script>
 
-        <script type="text/javascript" src="/js/zoom.min.js"></script>
+    <script type="text/javascript" src="/js/zoom.min.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
-        <script>
-          hljs.highlightAll();
-          hljs.initLineNumbersOnLoad();
-        </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
+    <script>
+      hljs.highlightAll();
+      hljs.initLineNumbersOnLoad();
+    </script>
 
-        <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
 
-        {{- range .Params.js }}
-          <script src="/js/{{ . }}"></script>
-        {{- end }}
+    {{- range .Params.js }}
+    <script src="/js/{{ . }}"></script>
+    {{- end }} {{ block "script" . }}{{ end }}
 
-        {{ block "script" . }}{{ end }}
+    <script type="text/javascript">
+      $(function () {
+        $('[data-toggle="popover"]').popover();
+      });
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+      $(".popover-dismiss").popover({
+        trigger: "focus",
+      });
 
-        <script type="text/javascript">
-          $(function () {
-            $('[data-toggle="popover"]').popover()
-          })
-          $('.popover-dismiss').popover({
-            trigger: 'focus'
-          })
-
-          $(function () {
-            $('div.highlight').each(function () {
-                var btnHtml = '<div class="bd-clipboard"><button type="button" class="btn-clipboard" title="Copy to clipboard">Copy</button></div>'
-                $(this).before(btnHtml)
-                $('.btn-clipboard')
-                    .tooltip()
-                    .on('mouseleave', function () {
-                        $(this).tooltip('hide')
-                    })
+      $(function () {
+        $("div.highlight").each(function () {
+          var btnHtml =
+            '<div class="bd-clipboard"><button type="button" class="btn-clipboard" title="Copy to clipboard">Copy</button></div>';
+          $(this).before(btnHtml);
+          $(".btn-clipboard")
+            .tooltip()
+            .on("mouseleave", function () {
+              $(this).tooltip("hide");
             });
+        });
 
-            var clipboard = new ClipboardJS('.btn-clipboard', {
-              target: function (trigger) {
-                return trigger.parentNode.nextElementSibling
-              }
-            })
+        var clipboard = new ClipboardJS(".btn-clipboard", {
+          target: function (trigger) {
+            return trigger.parentNode.nextElementSibling;
+          },
+        });
 
-            clipboard.on('success', function (e) {
-              $(e.trigger)
-                .attr('title', 'Copied!')
-                .tooltip('_fixTitle')
-                .tooltip('show')
-                .attr('title', 'Copy to clipboard')
-                .tooltip('_fixTitle')
+        clipboard.on("success", function (e) {
+          $(e.trigger)
+            .attr("title", "Copied!")
+            .tooltip("_fixTitle")
+            .tooltip("show")
+            .attr("title", "Copy to clipboard")
+            .tooltip("_fixTitle");
 
-              e.clearSelection()
-            })
+          e.clearSelection();
+        });
 
-            anchors.add('.bd-content > h2, .bd-content > h3, .bd-content > h4, .bd-content > h5')
-            $('.bd-content').children('h2, h3, h4, h5').wrapInner('<span class="bd-content-title"></span>')
-        })
-        </script>
-    </body>
+        anchors.add(
+          ".bd-content > h2, .bd-content > h3, .bd-content > h4, .bd-content > h5"
+        );
+        $(".bd-content")
+          .children("h2, h3, h4, h5")
+          .wrapInner('<span class="bd-content-title"></span>');
+      });
+    </script>
+  </body>
 </html>
