--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,14 +1,25 @@
 <div class="navbar-container">
-  <div class="bg-dark navbar-dark position-fixed" data-sticky="top">
+  <div class="bg-white navbar-light position-fixed" data-sticky="top">
     <div class="container-fluid container-wide container-nav">
       <nav class="navbar navbar-expand">
         <a class="navbar-brand" href="/">
           <img alt="Wingman" src="/img/logo.svg" class="logo" />
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <i class="icon-menu h4"></i>
         </button>
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-between"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a href="/" class="nav-link">Home</a>
@@ -17,44 +28,60 @@
               <a href="/docs/" class="nav-link">Docs</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Resources</a>
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="pagesDropdown"
+                role="button"
+                data-toggle="dropdown"
+                >Resources</a
+              >
               <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-
                 <a class="dropdown-item" href="pages-landing.html">
                   <span class="h6 mb-0">Rule Explorer</span>
-                  <p class="text-small text-muted">Explore community-made rules for Vale</p>
+                  <p class="text-small text-muted">
+                    Explore community-made rules for Vale
+                  </p>
                 </a>
 
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item" href="pages-app.html">
                   <span class="h6 mb-0">Config Showcase</span>
-                  <p class="text-small text-muted">Build detailed, functional web apps</p>
+                  <p class="text-small text-muted">
+                    Build detailed, functional web apps
+                  </p>
                 </a>
 
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item" href="pages-inner.html">
                   <span class="h6 mb-0">Community</span>
-                  <p class="text-small text-muted">Complete your online presence</p>
+                  <p class="text-small text-muted">
+                    Complete your online presence
+                  </p>
                 </a>
-
               </div>
             </li>
           </ul>
 
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="documentation/index.html" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="documentation/index.html" class="nav-link"
+                ><i class="fab fa-github fa-lg"></i
+              ></a>
             </li>
             <li class="nav-item">
-              <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-slack fa-lg"></i></a>
+              <a href="documentation/changelog.html" class="nav-link"
+                ><i class="fab fa-slack fa-lg"></i
+              ></a>
             </li>
             <li class="nav-item">
-              <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-discord fa-lg"></i></a>
+              <a href="documentation/changelog.html" class="nav-link"
+                ><i class="fab fa-youtube fa-lg"></i
+              ></a>
             </li>
           </ul>
-
         </div>
         <!--end nav collapse-->
       </nav>
