--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,146 +1,128 @@
 {{ define "main" }}
 
-<section class="space-lg bg-dark overflow-hidden">
-  <div class="container-fluid">
-    <div class="row align-items-center">
-      <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative text-center">
-        <h1 class="display-4">Your style, our editor</h1>
-        <p class="lead faded">
-          <b>Vale</b> is a command-line tool that brings code-like linting to prose. It's open source, customizable, and works many different applications.
-        </p>
-        <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">Download now</a>
-        <a href="pages-landing.html" class="btn btn-lg btn-link text-white">Read the docs <i class="icon-chevron-right"></i></a>
+<section class="pb-0 bg-white">
+  <div class="container">
+    <div class="row justify-content-center text-center section-intro mb-0">
+      <div class="col-12 col-md-9 col-lg-8 pb-3">
+        <span class="title-decorative">Introducing Vale</span>
+        <h3 class="display-4">Your style, our editor</h3>
+        <span class="lead">
+          <b>Vale</b> is an open-source, command-line tool (<i
+            class="fab fa-apple"
+          ></i
+          >, <i class="fab fa-windows"></i>, and <i class="fab fa-linux"></i>)
+          that brings <i>your</i> editorial style guide to life.
+        </span>
+        <a href="#purchase" class="btn btn-lg btn-success">Get started</a>
+        <a
+          href="https://docs.errata.ai/vale-server/install"
+          class="btn btn-lg btn-link"
+          target="_blank"
+          >Become a sponsor <i class="icon-chevron-right"></i
+        ></a>
       </div>
-      <!--end of col-->
-      <div class="col-12 col-md-6">
-        <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":3, "draggable":false }'>
-
-          <div class="carousel-cell col-11">
-
-            <div class="card card-sm bg-gradient border-0">
-              <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/obsidian.png" alt="Obsidian">
-              </a>
-              <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Vale + Obsidian</a>
-                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="carousel-cell col-11">
-            <div class="card card-sm bg-gradient border-0">
-              <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/vscode.png" alt="VS Code">
-              </a>
-              <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Vale + VS Code</a>
-                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="carousel-cell col-11">
-            <div class="card card-sm bg-gradient border-0">
-              <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/confluence.png" alt="Confluence">
-              </a>
-              <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Vale Server + Confluence</a>
-                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="carousel-cell col-11">
-            <div class="card card-sm bg-gradient border-0">
-              <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/github.png" alt="GitHub">
-              </a>
-              <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Vale + GitHub Actions</a>
-                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-              </div>
-            </div>
-          </div>
-
+      <div class="justify-content-center text-center">
+        <div class="popover-image">
+          <img src="/img/vale.png" alt="Image" class="img-fluid" />
         </div>
       </div>
-      <!--end of col-->
     </div>
-    <!--end of row-->
   </div>
-  <!--end of container-->
 </section>
 
- <section>
+<section class="bg-light">
   <div class="container">
-    <div class="row justify-content-center text-center section-intro">
-      <div class="col-12 col-md-9 col-lg-8">
-        <h2>Why Vale</h2>
-      </div>
-      <!--end of col-->
-    </div>
-    <!--end of row-->
-
-    <ul class="row feature-list feature-list-sm">
+    <ul class="row feature-list">
       <li class="col-12 col-md-4">
-        <h5><i class="icon-box h1 text-success"></i> Self-contained</h5>
+        <i class="icon-rocket h1 text-success"></i>
+        <h5 class="text-dark">Native Performance</h5>
         <p>
-          Vale is an easy-to-install, stand-alone binary. No more dealing with
-          package managers and dependecies.
+          Vale Server is a native desktop application. There are no size
+          restraints, usage quotas, or other limitations.
         </p>
-        <a href="pages-inner.html">View installation options &rsaquo;</a>
       </li>
       <li class="col-12 col-md-4">
-        <h5><i class="icon-cog h1 text-success"></i> Customizable</h5>
+        <i class="icon-cog h1 text-success"></i>
+        <h5 class="text-dark">Extensible</h5>
         <p>
-          Make Vale your own by creating custom rules and style guides. No
-          programming experience required.
+          Vale Server is 100% compatible with the Vale command-line tool,
+          allowing you to leverage its ecosystem of styles.
         </p>
-        <a href="pages-landing.html">Create your own style guide &rsaquo;</a>
       </li>
-      <!--end of col-->
       <li class="col-12 col-md-4">
-        <h5><i class="icon-lock h1 text-success"></i> Private</h5>
+        <i class="icon-lock h1 text-success"></i>
+        <h5 class="text-dark">Private &amp; Secure</h5>
         <p>
-           Vale runs entirely offline&mdash;ensuring that your
-           content is never sent to a remote server for processing.
+          Vale Server runs on entirely on <code>localhost</code>&mdash;ensuring
+          that your content is never sent to a remote server for processing.
         </p>
-        <a href="pages-app.html">Learn more &rsaquo;</a>
       </li>
-      <!--end of col-->
     </ul>
-    <!--end of row-->
   </div>
-  <!--end of container-->
 </section>
 
 <section class="bg-white p-0">
-  <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
+  <svg
+    class="decorative-divider"
+    preserveAspectRatio="none"
+    viewbox=" 0 0 100 100"
+  >
     <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
   </svg>
-  <div class="container-fluid">
-    <div class="row text-center">
+  <div class="container">
+    <div class="row text-center pt-2">
       <div id="oc" class="col">
         <h2>Sponsors &amp; Supporters</h2>
         <div class="pb-2">
           <span class="title-decorative">Companies</span>
-          <a href="https://opencollective.com/vale/organization/0/website"><img src="https://opencollective.com/vale/organization/0/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/1/website"><img src="https://opencollective.com/vale/organization/1/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/2/website"><img src="https://opencollective.com/vale/organization/2/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/3/website"><img src="https://opencollective.com/vale/organization/3/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/4/website"><img src="https://opencollective.com/vale/organization/4/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/5/website"><img src="https://opencollective.com/vale/organization/5/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/6/website"><img src="https://opencollective.com/vale/organization/6/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/7/website"><img src="https://opencollective.com/vale/organization/7/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/8/website"><img src="https://opencollective.com/vale/organization/8/avatar.svg?avatarHeight=100"></a>
-          <a href="https://opencollective.com/vale/organization/9/website"><img src="https://opencollective.com/vale/organization/9/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/0/website"
+            ><img
+              src="https://opencollective.com/vale/organization/0/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/1/website"
+            ><img
+              src="https://opencollective.com/vale/organization/1/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/2/website"
+            ><img
+              src="https://opencollective.com/vale/organization/2/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/3/website"
+            ><img
+              src="https://opencollective.com/vale/organization/3/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/4/website"
+            ><img
+              src="https://opencollective.com/vale/organization/4/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/5/website"
+            ><img
+              src="https://opencollective.com/vale/organization/5/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/6/website"
+            ><img
+              src="https://opencollective.com/vale/organization/6/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/7/website"
+            ><img
+              src="https://opencollective.com/vale/organization/7/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/8/website"
+            ><img
+              src="https://opencollective.com/vale/organization/8/avatar.svg?avatarHeight=100"
+          /></a>
+          <a href="https://opencollective.com/vale/organization/9/website"
+            ><img
+              src="https://opencollective.com/vale/organization/9/avatar.svg?avatarHeight=100"
+          /></a>
         </div>
 
         <div class="d-none d-lg-block">
           <span class="title-decorative">Individuals</span>
-          <a href="https://opencollective.com/vale"><img src="https://opencollective.com/vale/individuals.svg?width=890"></a>
+          <a href="https://opencollective.com/vale"
+            ><img
+              src="https://opencollective.com/vale/individuals.svg?width=890"
+          /></a>
         </div>
       </div>
       <!--end of col-->
@@ -150,13 +132,15 @@
   <!--end of container-->
 </section>
 
-<section>
+<section class="bg-light">
   <div class="container">
     <div class="row justify-content-center text-center section-intro">
       <div class="col-12 col-md-9 col-lg-8">
         <h2 class="display-4">Bootstrap core + much more</h2>
-        <span class="lead">Wingman features full coverage of Bootstrap's core components plus a suite of additional time-saving features</span>
-
+        <span class="lead"
+          >Wingman features full coverage of Bootstrap's core components plus a
+          suite of additional time-saving features</span
+        >
       </div>
       <!--end of col-->
     </div>
@@ -166,31 +150,59 @@
       <div class="col-12 col-md-6 col-lg-5 order-md-2">
         <ul class="nav" id="myTab" role="tablist">
           <li>
-            <a class="active card" id="tab-1" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
+            <a
+              class="active card"
+              id="tab-1"
+              data-toggle="tab"
+              href="#home"
+              role="tab"
+              aria-controls="home"
+              aria-selected="true"
+            >
               <div class="card-body">
                 <h5>Modular &amp; Multi-Purpose</h5>
                 <p>
-                  Create pages rich in functionality with Wingman's array of modular widgets - carefully designed for a wide range of purposes.
+                  Create pages rich in functionality with Wingman's array of
+                  modular widgets - carefully designed for a wide range of
+                  purposes.
                 </p>
               </div>
             </a>
           </li>
           <li>
-            <a class="card" id="tab-2" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
+            <a
+              class="card"
+              id="tab-2"
+              data-toggle="tab"
+              href="#profile"
+              role="tab"
+              aria-controls="profile"
+              aria-selected="false"
+            >
               <div class="card-body">
                 <h5>Familiar Markup</h5>
                 <p>
-                  Based on the Bootstrap 4 codebase, Wingman's code is instantly familiar, easy to understand and a dream to extend.
+                  Based on the Bootstrap 4 codebase, Wingman's code is instantly
+                  familiar, easy to understand and a dream to extend.
                 </p>
               </div>
             </a>
           </li>
           <li>
-            <a class="card" id="tab-3" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
+            <a
+              class="card"
+              id="tab-3"
+              data-toggle="tab"
+              href="#contact"
+              role="tab"
+              aria-controls="contact"
+              aria-selected="false"
+            >
               <div class="card-body">
                 <h5>Purposeful Plug-ins</h5>
                 <p>
-                  Elegantly extending Bootstrap's core functionality with Wizards, Touch Sliders, Interface Icons and more.
+                  Elegantly extending Bootstrap's core functionality with
+                  Wizards, Touch Sliders, Interface Icons and more.
                 </p>
               </div>
             </a>
@@ -200,14 +212,41 @@
       <!--end of col-->
       <div class="col-12 col-md-6 order-md-1">
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="tab-1">
-            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          <div
+            class="tab-pane fade show active"
+            id="home"
+            role="tabpanel"
+            aria-labelledby="tab-1"
+          >
+            <img
+              alt="Image"
+              class="img-fluid shadow"
+              src="/img/graphic-intro-widgets.png"
+            />
           </div>
-          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="tab-2">
-            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          <div
+            class="tab-pane fade"
+            id="profile"
+            role="tabpanel"
+            aria-labelledby="tab-2"
+          >
+            <img
+              alt="Image"
+              class="img-fluid shadow"
+              src="/img/graphic-intro-widgets.png"
+            />
           </div>
-          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="tab-3">
-            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          <div
+            class="tab-pane fade"
+            id="contact"
+            role="tabpanel"
+            aria-labelledby="tab-3"
+          >
+            <img
+              alt="Image"
+              class="img-fluid shadow"
+              src="/img/graphic-intro-widgets.png"
+            />
           </div>
         </div>
       </div>
@@ -217,7 +256,10 @@
     <div class="row justify-content-center text-center section-outro">
       <div class="col-lg-4 col-md-5">
         <h6>Detailed Overview</h6>
-        <p>Wingman's component index showcases the full breadth of features at a glance</p>
+        <p>
+          Wingman's component index showcases the full breadth of features at a
+          glance
+        </p>
         <a href="components-bootstrap.html">Start exploring &rsaquo;</a>
       </div>
       <!--end of col-->
