--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,6 +7,12 @@
 /*
 */
 
+.err {
+  display: inline-block;
+  position:relative;
+  background: url(http://i.imgur.com/HlfA2is.gif) bottom repeat-x;
+}
+
 iframe {
   padding: 0 0 15px 0;
 }
@@ -16,12 +22,9 @@ iframe {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #222831;
-  text-align: left;
+  font-family: "Inter", sans-serif;
+  color: #333 !important;
+  background-color: #fff;
   padding-top: 60px;
 }
 
