--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="justify-content-center text-center">
         <div class="popover-image">
-          <img src="/img/vale.png" alt="Image" class="img-fluid" />
+          <img src="/img/vale/windows.png" alt="Image" class="img-fluid" />
         </div>
       </div>
     </div>
