--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" href="pages-landing.html">
                   <span class="h6 mb-0">Rule Explorer</span>
                   <p class="text-small text-muted">
-                    Explore community-made rules for Vale
+                    Explore a library of ready-to-use rules for Vale
                   </p>
                 </a>
 
@@ -49,7 +49,7 @@
                 <a class="dropdown-item" href="pages-app.html">
                   <span class="h6 mb-0">Config Showcase</span>
                   <p class="text-small text-muted">
-                    Build detailed, functional web apps
+                    Browse community-made configurations for Vale
                   </p>
                 </a>
 
@@ -58,7 +58,7 @@
                 <a class="dropdown-item" href="pages-inner.html">
                   <span class="h6 mb-0">Community</span>
                   <p class="text-small text-muted">
-                    Complete your online presence
+                    Connect with the worldwide Vale community
                   </p>
                 </a>
               </div>
