--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
           >, <i class="fab fa-windows"></i>, and <i class="fab fa-linux"></i>)
           that brings <i>your</i> editorial style guide to life.
         </span>
-        <a href="#purchase" class="btn btn-lg btn-success">Get started</a>
+        <a href="/docs/" class="btn btn-lg btn-success">Get started</a>
         <a
           href="https://docs.errata.ai/vale-server/install"
           class="btn btn-lg btn-link"
@@ -23,7 +23,7 @@
       </div>
       <div class="justify-content-center text-center">
         <div class="popover-image">
-          <img src="/img/vale/windows.png" alt="Image" class="img-fluid" />
+          <img src="/img/vale/mac.png" alt="Image" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -37,24 +37,24 @@
         <i class="icon-rocket h1 text-success"></i>
         <h5 class="text-dark">Native Performance</h5>
         <p>
-          Vale Server is a native desktop application. There are no size
-          restraints, usage quotas, or other limitations.
+          Vale compiles into a fast, dependency-free binary available for macOS,
+          Windows, or Linux.
         </p>
       </li>
       <li class="col-12 col-md-4">
         <i class="icon-cog h1 text-success"></i>
         <h5 class="text-dark">Extensible</h5>
         <p>
-          Vale Server is 100% compatible with the Vale command-line tool,
-          allowing you to leverage its ecosystem of styles.
+          Vale helps you maintain a consistent and on-brand voice by allowing
+          you to create your own custom rules.
         </p>
       </li>
       <li class="col-12 col-md-4">
         <i class="icon-lock h1 text-success"></i>
         <h5 class="text-dark">Private &amp; Secure</h5>
         <p>
-          Vale Server runs on entirely on <code>localhost</code>&mdash;ensuring
-          that your content is never sent to a remote server for processing.
+          Vale runs entirely offline&mdash;ensuring that your content is never
+          sent to a remote server for processing.
         </p>
       </li>
     </ul>
@@ -134,12 +134,13 @@
 
 <section class="bg-light">
   <div class="container">
-    <div class="row justify-content-center text-center section-intro">
+    <div class="row justify-content-center text-center">
       <div class="col-12 col-md-9 col-lg-8">
-        <h2 class="display-4">Bootstrap core + much more</h2>
+        <span class="title-decorative">Use Vale where you want</span>
+        <h2 class="display-5">More than just a CLI tool</h2>
         <span class="lead"
-          >Wingman features full coverage of Bootstrap's core components plus a
-          suite of additional time-saving features</span
+          >Vale integrates with third-party apps and services to allow you to
+          enforce you style guide wherever you want.</span
         >
       </div>
       <!--end of col-->
@@ -147,7 +148,7 @@
     <!--end of row-->
 
     <div class="row justify-content-around align-items-center">
-      <div class="col-12 col-md-6 col-lg-5 order-md-2">
+      <div class="col-12 col-md-4 order-md-2">
         <ul class="nav" id="myTab" role="tablist">
           <li>
             <a
@@ -160,11 +161,10 @@
               aria-selected="true"
             >
               <div class="card-body">
-                <h5>Modular &amp; Multi-Purpose</h5>
+                <h5>Web-based dashboard</h5>
                 <p>
-                  Create pages rich in functionality with Wingman's array of
-                  modular widgets - carefully designed for a wide range of
-                  purposes.
+                  Create rules, install styles, and manage configurations with
+                  Vale Server.
                 </p>
               </div>
             </a>
@@ -180,10 +180,10 @@
               aria-selected="false"
             >
               <div class="card-body">
-                <h5>Familiar Markup</h5>
+                <h5>Text editor plugins</h5>
                 <p>
-                  Based on the Bootstrap 4 codebase, Wingman's code is instantly
-                  familiar, easy to understand and a dream to extend.
+                  Get on-the-fly feedback in your favorite text editor,
+                  including VS Code, Sublime Text, Atom, Vim, and Emacs.
                 </p>
               </div>
             </a>
@@ -199,18 +199,17 @@
               aria-selected="false"
             >
               <div class="card-body">
-                <h5>Purposeful Plug-ins</h5>
+                <h5>Browser extensions</h5>
                 <p>
-                  Elegantly extending Bootstrap's core functionality with
-                  Wizards, Touch Sliders, Interface Icons and more.
+                  Check your content on the web without having to trust a remote
+                  server with Vale's Chrome extension.
                 </p>
               </div>
             </a>
           </li>
         </ul>
       </div>
-      <!--end of col-->
-      <div class="col-12 col-md-6 order-md-1">
+      <div class="col-12 col-md-8 order-md-1">
         <div class="tab-content" id="myTabContent">
           <div
             class="tab-pane fade show active"
@@ -218,11 +217,15 @@
             role="tabpanel"
             aria-labelledby="tab-1"
           >
-            <img
-              alt="Image"
-              class="img-fluid shadow"
-              src="/img/graphic-intro-widgets.png"
-            />
+            <div class="">
+              <img
+                alt="Image"
+                class="screenshot img-fluid shadow img-skewed-item"
+                src="/img/vale-server/studio.png"
+                data-action="zoom"
+                data-aos="img-skewed-item-left"
+              />
+            </div>
           </div>
           <div
             class="tab-pane fade"
@@ -230,11 +233,15 @@
             role="tabpanel"
             aria-labelledby="tab-2"
           >
-            <img
-              alt="Image"
-              class="img-fluid shadow"
-              src="/img/graphic-intro-widgets.png"
-            />
+            <div>
+              <img
+                alt="Image"
+                class="screenshot img-fluid shadow img-skewed-item"
+                src="/img/vale-server/vscode.png"
+                data-action="zoom"
+                data-aos="img-skewed-item-left"
+              />
+            </div>
           </div>
           <div
             class="tab-pane fade"
@@ -242,25 +249,24 @@
             role="tabpanel"
             aria-labelledby="tab-3"
           >
-            <img
-              alt="Image"
-              class="img-fluid shadow"
-              src="/img/graphic-intro-widgets.png"
-            />
+            <div>
+              <img
+                alt="Image"
+                class="screenshot img-fluid shadow img-skewed-item"
+                src="/img/vale-server/confluence.png"
+                data-action="zoom"
+                data-aos="img-skewed-item-left"
+              />
+            </div>
           </div>
         </div>
       </div>
-      <!--end of col-->
     </div>
-    <!--end of row-->
     <div class="row justify-content-center text-center section-outro">
       <div class="col-lg-4 col-md-5">
-        <h6>Detailed Overview</h6>
-        <p>
-          Wingman's component index showcases the full breadth of features at a
-          glance
-        </p>
-        <a href="components-bootstrap.html">Start exploring &rsaquo;</a>
+        <h6>Read the docs</h6>
+        <p>Check out our extensive documentation to see how it all works.</p>
+        <a href="/docs/">Learn more &rsaquo;</a>
       </div>
       <!--end of col-->
     </div>
