--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,64 +1,117 @@
 <footer class="bg-dark footer-long">
-<div class="container">
-  <div class="row ml-auto">
-    <div class="col-md-4 mb-5">
-      <h6 class="text-uppercase">About</h6>
-      <p class="u-t-sm u-b-sm">
-        <b>errata.ai</b> develops software to help writers maintain on-brand, consistent, and mistake-free content.
-      </p>
-    </div>
-    <div class="col-md-2 mb-5">
-      <ul class="list-unstyled list-spaced">
-        <li class="mb-2">
-          <h6 class="text-uppercase">Contact</h6>
-        </li>
-        <li class="text-muted">
-          <a class="foot-nav" href="https://github.com/errata-ai"><i class="fab fa-github"></i> GitHub</a>
-        </li>
-        <li class="text-muted">
-          <a class="foot-nav" href="mailto:support@errata.ai"><i class="far fa-envelope-open"></i> support@errata.ai</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col-md-6 mb-5">
-      <ul class="list-unstyled list-spaced">
-        <li class="mb-2">
-          <h6 class="text-uppercase">Stay in the loop!</h6>
-        </li>
-        <li>
-          Join our mailing list to receive updates and announcements.
-        </li>
-      </ul>
-      <div id="mc_embed_signup">
-        <form action="https://errata.us17.list-manage.com/subscribe/post?u=786aee7130924d842bd7f47c6&amp;id=5fe08825fa" method="post"
-          id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="novalidate">
-          <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group">
-              <div class="input-group">
-                <input type="email" placeholder="Your email" name="EMAIL" class="required email form-control" id="mce-EMAIL" aria-required="true">
-                <span class="input-group-btn">
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                    <input type="text" name="b_786aee7130924d842bd7f47c6_5fe08825fa" tabindex="-1" value="">
-                  </div>
-                  <button type="submit" class="btn btn-primary" name="subscribe" id="mc-embedded-subscribe">Sign up!</button>
-                </span>
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
+  <div class="container">
+    <div class="row ml-auto">
+      <div class="col-md-4 mb-5">
+        <h6 class="text-uppercase">About</h6>
+        <p class="u-t-sm u-b-sm">
+          Hi, there! I'm <a href="https://twitter.com/jdkato">@jdkato</a>, the
+          sole developer of Vale. You can check out more of my work at
+          <a href="https://github.com/jdkato">GitHub</a> or become a sponsor
+          through the project's
+          <a href="https://opencollective.com/vale">Open Collective.</a>
+        </p>
+      </div>
+      <div class="col-md-2 mb-5">
+        <ul class="list-unstyled list-spaced">
+          <li class="mb-2">
+            <h6 class="text-uppercase">Connect</h6>
+          </li>
+          <li class="text-muted">
+            <a class="foot-nav" href="https://github.com/errata-ai"
+              ><i class="fab fa-github"></i> GitHub</a
+            >
+          </li>
+          <li class="text-muted">
+            <a class="foot-nav" href="https://github.com/errata-ai"
+              ><i class="fab fa-slack"></i> Slack</a
+            >
+          </li>
+          <li class="text-muted">
+            <a class="foot-nav" href="https://github.com/errata-ai"
+              ><i class="fab fa-youtube"></i> YouTube</a
+            >
+          </li>
+          <li class="text-muted">
+            <a class="foot-nav" href="mailto:jdkato@vale.sh"
+              ><i class="far fa-envelope-open"></i> jdkato@vale.sh</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-6 mb-5">
+        <ul class="list-unstyled list-spaced">
+          <li class="mb-2">
+            <h6 class="text-uppercase">Stay in the loop</h6>
+          </li>
+          <li>Join our mailing list to receive updates and announcements.</li>
+        </ul>
+        <div id="mc_embed_signup">
+          <form
+            action="https://errata.us17.list-manage.com/subscribe/post?u=786aee7130924d842bd7f47c6&amp;id=5fe08825fa"
+            method="post"
+            id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            class="validate"
+            target="_blank"
+            novalidate="novalidate"
+          >
+            <div id="mc_embed_signup_scroll">
+              <div class="mc-field-group">
+                <div class="input-group">
+                  <input
+                    type="email"
+                    placeholder="Coming soon!"
+                    name="EMAIL"
+                    class="required email form-control"
+                    id="mce-EMAIL"
+                    aria-required="true"
+                    disabled
+                  />
+                  <span class="input-group-btn">
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div
+                      style="position: absolute; left: -5000px"
+                      aria-hidden="true"
+                    >
+                      <input
+                        type="text"
+                        name="b_786aee7130924d842bd7f47c6_5fe08825fa"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-primary"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      disabled
+                    >
+                      Sign up!
+                    </button>
+                  </span>
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div
+                    class="response"
+                    id="mce-error-response"
+                    style="display: none"
+                  ></div>
+                  <div
+                    class="response"
+                    id="mce-success-response"
+                    style="display: none"
+                  ></div>
+                </div>
               </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <span class="text-muted">© 2022 vale.sh</span>
       </div>
     </div>
-    <div class="col-md-12">
-      <span>© 2021
-        <a href="https://errata.ai" target="_blank">errata.ai</a>
-      </span>
-    </div>
   </div>
-</div>
   <!--end of container-->
 </footer>
