--- a/layouts/_default/topic.html
+++ b/layouts/_default/topic.html
@@ -13,6 +13,7 @@
 
     <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content my-2 my-md-0 docs" role="main">
       <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
+        <!--
         <div id="platforms" class="btn-group btn-group-toggle" data-toggle="buttons">
           <label id="windows" class="btn btn-secondary">
             <input type="radio" name="options" id="option1" checked> <i class="fab fa-windows"></i>
@@ -24,7 +25,8 @@
             <input type="radio" name="options" id="option3"> <i class="fab fa-linux"></i>
           </label>
         </div>
-        {{/*  <a class="btn btn-sm btn-bd-light my-2 my-md-0" href="{{ .Site.Params.repo }}/blob/v4-dev/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">View on GitHub</a>  */}}
+      -->
+        <button class="btn btn-sm btn-light my-2 my-md-0" href="{{ .Site.Params.repo }}/blob/v4-dev/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">View on GitHub</button>
         <h1 class="bd-title" id="content">{{ .Title | markdownify }}</h1>
       </div>
       <p class="bd-lead">{{ .Page.Params.Description | markdownify }}</p>
