--- a/layouts/index.html
+++ b/layouts/index.html
@@ -137,7 +137,7 @@
     <div class="row justify-content-center text-center">
       <div class="col-12 col-md-9 col-lg-8">
         <span class="title-decorative">Use Vale where you want</span>
-        <h2 class="display-5">More than just a CLI tool</h2>
+        <h2 class="display-5">Much more than a CLI tool</h2>
         <span class="lead"
           >Vale integrates with third-party apps and services to allow you to
           enforce you style guide wherever you want.</span
