--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,16 +9,20 @@
 
 .err {
   display: inline-block;
-  position:relative;
+  position: relative;
   background: url(http://i.imgur.com/HlfA2is.gif) bottom repeat-x;
+}
+
+.prompt_ {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  --tw-text-opacity: 1;
 }
 
 iframe {
   padding: 0 0 15px 0;
-}
-
-.bg-primary {
-  background-color: #cdeac0 !important;
 }
 
 .bg-dark {
@@ -131,6 +135,11 @@ kbd {
 .highlight pre {
   /* Avoid pushing up the copy buttons. */
   margin: 0;
+  padding-bottom: 10px;
+}
+
+.bd-content>h3 {
+  font-size: calc(1rem + 0.5vw);
 }
 
 .docs code,
